@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Wed Mar 29 15:29:19 2006
+# Generated on Wed Mar 29 15:45:16 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
